# batch-detective

./: .gitignore  README.md  pyproject.toml
.github/workflows/: tests.yml  validate.yml
batch_detective/: README.md  __init__.py  association.py  cli.py  compat.py  config.py  constants.py  dependencies.py  gene_impact.py  normalizer.py  report.py  streamlit_app.py  utils.py  validator.py
batch_detective/batch_detective/: anonymizer.py  cli.py  exceptions.py  manifest.py  outliers.py  pca_analysis.py  plots.py  qc.py  streamlit_app.py
batch_detective/batch_detective.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
batch_detective/batch_detective/templates/: report_template.html
batch_detective/tests/: test_association.py  test_outliers.py  test_validator.py
docs/: validation_report.html
tests/: conftest.py  test_association.py  test_cli.py  test_normalizer.py  test_qc.py  test_report.py  test_validator.py
tests/tests/: conftest.py
tests/validation/: README.md  generate_validation_report.py  run_all_validation.py  run_validation_final.py  run_validation_panel.py
