[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "batch-detective"
version = "0.1.0"
requires-python = ">=3.8"
description = "Batch effect diagnosis tool for bulk RNA-seq count matrices"
license = {text = "MIT"}
dependencies = [
    "pandas>=1.5.0",
    "numpy>=1.21.0",
    "scipy>=1.9.0",
    "scikit-learn>=1.1.0",
    "matplotlib>=3.5.0",
    "seaborn>=0.12.0",
    "click>=8.0.0",
    "jinja2>=3.0.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
progress = ["tqdm>=4.60.0"]
stats    = ["pingouin>=0.5.3"]
serve    = ["streamlit>=1.20.0"]
pdf      = ["weasyprint>=57.0"]
dev      = ["pytest>=7.0.0", "pytest-cov>=4.0.0", "black>=22.0.0", "flake8>=5.0.0"]
full     = ["tqdm>=4.60.0", "pingouin>=0.5.3"]

[project.scripts]
batch-detective = "batch_detective.cli:main"

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.package-data]
batch_detective = ["templates/*.html"]
